# monica

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  Visualize(seconde).py  Visualize.py  build-number.nsh  build-number.txt  compile_commands.json  create_cmake_release.sh  create_solution_x64_VS17_2022.cmd  create_solution_x64_VS18_2026.cmd  crop_suitability.csv  db-connections-install.ini  db-connections.ini.template  fvcb_hourly_data.csv  how_to_build_docker_image.txt  how_to_run_monica_via_docker.txt  increase-build-number.bat  inputs-hohenfinow.json  linux-build-jv.sh  monica-eva.sln.template  monica-eva2-template.sln  monica-hermes.sln.template  monica-json.sln.template  monica-jv.pro  monica-jv.pro.template  monica-mpmas-template.sln  monica-swig-template.sln  monica-swig.pro  monica-swig.pro.template  monica-template.pro  monica-template.sln  monica.i  monica.ini  monica.ini.template  monica.pro.template  monica.rc  monica.sln  (+42 more)
.github/workflows/: docker-image.yml  on-tag.yml  windows_build_install_package.yml
.zed/: debug.json  tasks.json
docker/: start_monica_supervisor.sh  start_monica_with_proxy.sh  supervisord.conf
docs/: src-core-dependency-graph.mmd
documentation/: de_benutzerhandbuch_MONICA_windows.doc  en_user_manual_MONICA_windows.doc
installer/: EnvVarUpdate.nsh  installer-script.nsi  run-hermes-installer-x64.bat  run-hermes-installer-x86.bat  run-installer-with-parameter.bat  run-installer-x64.bat  run-installer-x86.bat  run-json-vc12-installer-x64.bat
installer/Hohenfinow2/: Irrig.TXT  MET_HF.991  MET_HF.992  MET_HF.993  MET_HF.994  MET_HF.995  MET_HF.996  MET_HF.997  ROTATION.txt  SLAGDUNG.txt  climate-iso.csv  climate-min.csv  climate.csv  climate.ods  crop+.json  crop-hp.json  crop-inter_s.json  crop-inter_w.json  crop-min-hp.json  crop-min-ic.json  crop-min-mc.json  crop-min.json  crop-ser.json  crop.json  min-out-monica.csv  min-out-stics.csv  out.csv  out_+.csv  sim+.json  sim-hp.json  sim-min-hp.json  sim-min-ic.json  sim-min-mc.json  sim-min.json  sim-ser.json  sim.json  site+.json  site-min.json  site.json
installer/landcare-dss/: crop.json  sim.json  site.json  start-monica-for-landcare-dss.bat  test.py  test_consumer.py
installer/testing/: testreference.csv
json/: test.crop.json  test.sim.json
meta.json/: README.md  howto.meta.txt  meta.crop.json  meta.sim.json  meta.site.json
monica-cluster-mpi/: analyse_monica_outputs.py  macsur_config.py  mpi_helper.py  phase_1_run_macsur_scaling_simulation.py  phase_2-step_1-run_macsur_scaling_simulation.py  phase_2-step_2-3-run_macsur_scaling_simulation.py  run_carbiocial_simulation.py  test-mpi.py  test_carbiocial_simulation.py
monica-eva/: monica-eva-template.vcxproj  monica-eva-template.vcxproj.filters  monica-eva.vcxproj.filters.template  monica-eva.vcxproj.user.template
monica-eva2/: monica-eva2-template.vcxproj  monica-eva2-template.vcxproj.filters  monica-eva2.vcxproj  monica-eva2.vcxproj.filters
monica-hermes/: monica-hermes-template.vcxproj  monica-hermes-template.vcxproj.filters  monica-hermes.filters  monica-hermes.vcxproj  monica-hermes.vcxproj.filters.template  monica-hermes.vcxproj.template  monica-hermes.vcxproj.user.template
monica-json/: monica-json.vcxproj.filters.template  monica-json.vcxproj.template  monica-json.vcxproj.user.template
monica-mpmas/: monica-mpmas-template.vcxproj  monica-mpmas-template.vcxproj.filters  monica-mpmas.vcxproj  monica-mpmas.vcxproj.filters  monica-mpmas.vcxproj.filters.template  monica-mpmas.vcxproj.user.template
monica-swig/: monica-swig-template.vcxproj  monica-swig.sln  monica-swig.vcxproj.filters.template  monica.i  monica.res  monica.vcxproj  monica.vcxproj.filters
old/meta.json/: README.md  meta.sim.json
old/project.json/: example.crop.json  example.site.json
project-files/: monica.pro.template  monica.sln  monica.sln.template  monica.vcxproj.filters.template  monica.vcxproj.template  monica.vcxproj.user.template
project-files/monica/: monica.vcxproj  (+3 more)
project-files/monica-lib/: monica-lib.vcxproj  monica-lib.vcxproj.filters  monica-lib.vcxproj.filters.template  monica-lib.vcxproj.template
project-files/monica-python/: monica-python.vcxproj  monica-python.vcxproj.filters
project-files/monica-run/: monica-run.vcxproj  monica-run.vcxproj.filters  monica-run.vcxproj.filters.template  monica-run.vcxproj.template  monica-run.vcxproj.user.template
project-files/monica-zmq-control/: monica-zmq-control.vcxproj  monica-zmq-control.vcxproj.filters  monica-zmq-control.vcxproj.filters.template  monica-zmq-control.vcxproj.template
project-files/monica-zmq-control-send/: monica-zmq-control-send.vcxproj  monica-zmq-control-send.vcxproj.filters
project-files/monica-zmq-proxy/: monica-zmq-proxy.vcxproj  monica-zmq-proxy.vcxproj.filters  monica-zmq-proxy.vcxproj.filters.template  monica-zmq-proxy.vcxproj.template
project-files/monica-zmq-run/: monica-zmq-run.vcxproj  monica-zmq-run.vcxproj.filters  monica-zmq-run.vcxproj.filters.template  monica-zmq-run.vcxproj.template
project.json/: .directory  example.crop.json  example.sim.json
sqlite-db/: add_row_ods_dependant_params_table.py  change_crop_id.py  copy_parameterset.py  delete_parameterset.py  ka5-soil-data.sqlite  landcare-dss.sqlite  monica-jv.sqlite  monica.sqlite  monica_20130808115645.sqlite  monica_opt_nmae.sqlite  views.sql
src/: carbiocial.cpp  carbiocial.h  cc_germany_methods.cpp  cc_germany_methods.h  configuration.cpp  configuration.h  conversion.cpp  conversion.h  crop.cpp  crop.h  debug.cpp  debug.h  eva2_methods.cpp  eva2_methods.h  eva3_methods.cpp  eva_methods.cpp  eva_methods.h  gis_simulation_methods.cpp  gis_simulation_methods.h  macsur_scaling_interface.cpp  macsur_scaling_interface.h  main.cpp  monica-cc-germany-main.cpp  monica-eom.cpp  monica-eom.h  monica-eva-main.cpp  monica-gis-main.cpp  monica-hermes-main.cpp  monica-json-main.cpp  monica-landcare-dss-main.cpp  monica-main.cpp  monica-mpmas-main.cpp  monica-parameters.cpp  monica-parameters.h  monica-typedefs.h  monica.cpp  monica.h  mpmas.cpp  mpmas.h  simulation.cpp  (+14 more)
(+199 files in other folders)
